<resources>
    //TextView sources
    <string name="app_name">Smart Playlists</string>
    <string name="app_version">Version 0.1</string>

    <string name="title_activity_main_navi">MainNaviActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcomeText">Welcome! Sign in to a streaming service to continue</string>
    <string name="spotifyLogoText">Spotify Login</string>
    <string name="appleMusicLogoText">Apple Music Login</string>
    <string name="transfer_playlists">Transfer Playlists</string>
    <string name="nonProUsedPlaceholder">%1$d/5</string>
    <string name="schedule_a_playlist_transfer">Schedule a Playlist Transfer</string>
    <string name="upgrade_to_pro">Upgrade to Pro</string>
    <string name="serviceholder">ServiceHolder</string>
    <string name="carrot_button"><![CDATA[>]]></string>
    <string name="user_status">User Status</string>
    <string name="log_in">Log In</string>
    <string name="spotify">Spotify</string>
    <string name="apple_music">Apple Music</string>
    <string name="music_streaming_services">Music Streaming Services</string>
    <string name="settings">Settings</string>
    <string name="free">Free</string>

    //Spotify Api Requests
    <string name="spotify_client_id">ebb86a96bcff41709ee2a7acc0bbd94c</string>
    <string name="spotify_client_secret">c580557c2f034f6f87d10c8d2587b967</string>
    <string name="spotify_redirect">https://smartplaylists.chonbonstudios.com/auth</string>
    <string name="api_spotify_login">https://accounts.spotify.com/authorize?client_id=ebb86a96bcff41709ee2a7acc0bbd94c&amp;response_type=code&amp;scope=playlist-read-collaborative playlist-modify-public playlist-read-private playlist-modify-private&amp;redirect_uri=https://smartplaylists.chonbonstudios.com/auth</string>
    <string name="api_spotify_accesss">https://accounts.spotify.com/api/token</string>
    <string name="api_spotify_getplaylists">https://api.spotify.com/v1/me/playlists?limit=50</string>
    <string name="api_spotify_gettracks">https://api.spotify.com/v1/playlists/%1$s/tracks</string>
    <string name="api_spotify_search">https://api.spotify.com/v1/search</string>
    <string name="api_spotify_createplaylists">https://api.spotify.com/v1/users/%1$s/playlists</string>
    <string name="api_spotify_add_tracks">https://api.spotify.com/v1/playlists/%1$s/tracks</string>

    //Apple Music Api
    <string name="apple_dev_token">eyJhbGciOiJFUzI1NiIsInR5cCI6IkpXVCIsImtpZCI6IlZNNzgyTkROU1IifQ.eyJpc3MiOiI5Mkg3Mzk5MzROIiwiaWF0IjoxNTkwNjA0OTM0LCJleHAiOjE2MDYzODM3MzR9.yaod-8EI1PwoGOi7b1Ujo-drqz0pVNxWnI41btm5fLQYWLtubMKFYD2gTPaa-VW5SK-w1D6YyRtVKKvs-5dtWw</string>
    <string name="api_apple_get_all_playlists">https://api.music.apple.com/v1/me/library/playlists?limit=100</string>
    <string name ="api_apple_get_tracks_from_playlist">https://api.music.apple.com/v1/me/library/playlists/</string>
    <string name="api_apple_search_track">https://api.music.apple.com/v1/catalog/us/search</string>
    <string name="api_apple_create_playlists">https://api.music.apple.com/v1/me/library/playlists</string>
    <string name="api_apple_add_tracks_to_playlists">https://api.music.apple.com/v1/me/library/playlists/%1$s/tracks</string>

    //ADS
    <string name="native_ad_list_v1">ca-app-pub-7967585443791563/2630970645</string>

</resources>
